syntax = "proto3";

option csharp_namespace = "PaymentRecive.API.Proto";

package PaymentReciveAPI;

message CatalogItemRequest {
	int32 productId = 1;
}

message CatalogItemResponse {
	int32 productId = 1;
	string name = 2;
    string description=3;
    double price=4;
    int32 available_stock=5;
}

message CatalogItemsRequest {
	string ids = 1;
	int32 pageSize = 2;
	int32 pageIndex = 3;
}

message PaginatedItemsResponse {
	int32 pageIndex = 1;
	int32 pageSize = 2;
	int64 count = 3;
	repeated CatalogItemResponse data = 4;
}

service CatalogGrpc {
  rpc GetItemById (CatalogItemRequest) returns (CatalogItemResponse) {}
  rpc GetItemsByIds (CatalogItemsRequest) returns (PaginatedItemsResponse) {}
}